--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "path-to-regexp": "^2.4.0",
         "prettier": "^1.15.1",
         "react": "^16.3.1",
+        "react-dom": "^16.6.1",
         "react-router": "^4.3.1",
         "react-router-config": "^1.0.0-beta.4",
         "react-router-dom": "^4.2.2"
