--- a/package.json
+++ b/package.json
@@ -10,13 +10,7 @@
         "type": "git",
         "url": "git+https://github.com/anew-org/router.git"
     },
-    "keywords": [
-        "anew",
-        "router",
-        "react",
-        "react-router",
-        "react-router-dom"
-    ],
+    "keywords": ["anew", "router", "react", "react-router", "react-router-dom"],
     "bugs": {
         "url": "https://github.com/anew-org/router/issues"
     },
@@ -32,11 +26,8 @@
     },
     "dependencies": {
         "history": "^4.7.2",
-        "husky": "^1.1.3",
-        "lint-staged": "^8.0.4",
         "lodash.trimstart": "^4.5.1",
         "path-to-regexp": "^2.4.0",
-        "prettier": "^1.15.1",
         "react": "^16.3.1",
         "react-dom": "^16.6.1",
         "react-router": "^4.3.1",
@@ -44,6 +35,9 @@
         "react-router-dom": "^4.2.2"
     },
     "devDependencies": {
+        "husky": "^1.1.3",
+        "lint-staged": "^8.0.4",
+        "prettier": "^1.15.1",
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-eslint": "8",
