--- a/package.json
+++ b/package.json
@@ -42,35 +42,35 @@
         "start": "babel src -w -d lib"
     },
     "dependencies": {
-        "@babel/runtime": "^7.2.0",
+        "@babel/runtime": "^7.3.1",
         "history": "^4.7.2",
         "lodash.trimstart": "^4.5.1",
-        "path-to-regexp": "^2.4.0",
-        "react": "^16.3.1",
+        "path-to-regexp": "^3.0.0",
+        "react": "^16.7.0",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.2.2"
     },
     "devDependencies": {
-        "@babel/cli": "^7.2.0",
+        "@babel/cli": "^7.2.3",
         "@babel/core": "^7.2.0",
-        "@babel/plugin-proposal-class-properties": "^7.2.1",
-        "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+        "@babel/plugin-proposal-class-properties": "^7.3.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
         "@babel/plugin-transform-react-display-name": "^7.2.0",
-        "@babel/plugin-transform-react-jsx": "^7.2.0",
+        "@babel/plugin-transform-react-jsx": "^7.3.0",
         "@babel/plugin-transform-runtime": "^7.2.0",
-        "@babel/preset-env": "^7.2.0",
+        "@babel/preset-env": "^7.3.1",
         "babel-core": "^7.0.0-bridge.0",
         "babel-eslint": "^10.0.1",
-        "babel-jest": "^23.6.0",
-        "enzyme": "^3.3.0",
-        "enzyme-adapter-react-16": "^1.1.1",
-        "enzyme-to-json": "^3.3.3",
-        "eslint": "4.x",
-        "eslint-plugin-react": "^7.10.0",
-        "husky": "^1.1.3",
-        "jest": "^23.4.1",
-        "lint-staged": "^8.0.4",
-        "prettier": "^1.15.1",
-        "webpack": "^4.25.1"
+        "babel-jest": "^24.0.0",
+        "enzyme": "^3.8.0",
+        "enzyme-adapter-react-16": "^1.8.0",
+        "enzyme-to-json": "^3.3.5",
+        "eslint": "5.13.0",
+        "eslint-plugin-react": "^7.12.4",
+        "husky": "^1.3.1",
+        "jest": "^24.0.0",
+        "lint-staged": "^8.1.3",
+        "prettier": "^1.16.4",
+        "webpack": "^4.29.0"
     }
 }
