--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,17 @@
 {
-	"printWidth": 100,
-	"tabWidth": 4,
-	"semi": false,
-	"singleQuote": true,
-	"bracketSpacing": true,
-	"trailingComma": "es5",
-	"arrowParens": "avoid"
+    "printWidth": 100,
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "trailingComma": "es5",
+    "arrowParens": "avoid",
+    "overrides": [
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 1
+            }
+        }
+    ]
 }
