--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
         "examples:test": "cross-env CI=true babel-node examples/testAll.js"
     },
     "dependencies": {
-        "@babel/runtime": "^7.6.3",
+        "@babel/runtime": "^7.7.4",
+        "enzyme-to-json": "^3.4.3",
         "history": "^4.10.1",
         "lodash.trimstart": "^4.5.1",
         "path-to-regexp": "^6.1.0",
-        "react": "^16.10.2",
+        "react": "^16.12.0",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2"
     },
@@ -76,11 +77,11 @@
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.14.3",
         "eslint-plugin-react-hooks": "^1.7.0",
-        "glob": "^7.1.4",
+        "glob": "^7.1.6",
         "husky": "^3.1.0",
         "jest": "^24.9.0",
         "lint-staged": "^9.4.3",
-        "prettier": "^1.18.2",
+        "prettier": "^1.19.1",
         "rimraf": "^3.0.0",
         "rollup": "^1.20.3",
         "rollup-plugin-babel": "^4.3.3",
