--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
         "history": "^4.10.1",
         "lodash.trimstart": "^4.5.1",
         "path-to-regexp": "^3.1.0",
-        "react": "^16.10.2",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2"
     },
@@ -72,5 +71,8 @@
         "lint-staged": "^9.4.2",
         "prettier": "^1.18.2",
         "webpack": "^4.41.2"
+    },
+    "peerDependencies": {
+        "react": "^16.13.1"
     }
 }
